test/functions/diten/badwhere.good
badwhere.chpl:4: In function 'foo':
badwhere.chpl:4: error: a 'where' clause expression must be a 'param', but got a non-'param'
  badwhere.chpl:1: called as foo(x: string, y: string, z: bool)
